fix: video resolution on small devices

--- a/src/index.css
+++ b/src/index.css
@@ -3,18 +3,18 @@
 @tailwind utilities;
 
 * {
-  margin: 0;
-  padding: 0;
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 body {
-  color: white;
-  width: 100dvw;
   overflow-x: hidden;
+  width: 100dvw;
   height: 100%;
-  background: #000;
   border-color: #3b3b3b;
+  color: white;
+  background: #000;
   user-select: none;
 }
 
@@ -23,10 +23,10 @@ canvas {
 }
 
 .screen-max-width {
-  margin-inline-start: auto;
-  margin-inline-end: auto;
   position: relative;
   max-width: 1120px;
+  margin-inline-start: auto;
+  margin-inline-end: auto;
 }
 
 @layer utilities {
@@ -99,7 +99,7 @@ canvas {
   }
 
   .hiw-video {
-    @apply absolute w-[95%] h-[90%] rounded-[56px] overflow-hidden;
+    @apply absolute w-[95%] h-[90%] rounded-[16px] sm:rounded-[56px] overflow-hidden;
   }
 
   .hiw-text-container {
